@@ -14,6 +14,11 @@
 
 4.6.1 to 4.7: (mmm dd, 2015)
 
+  * Added mappable events for swapping TV color/BW, left difficulty A/B
+    and right difficulty A/B.  This means that one key. joystick button,
+    etc can be used to toggle each event.  Thanks to Buzbard of AtariAge
+    for the suggestion.
+
   * Changed 'hidecursor' commandline argument (and associated UI item) to
     'cursor'.  The new argument allows to set mouse cursor visibility
     separately for both UI and emulation modes.
